# snake_project

./: README.md  a.out  snake.cpp  snake.h
SnakeGame/: CMakeLists.txt
SnakeGame/include/: game_board.h  snake.h
SnakeGame/src/: game_board.cpp  main.cpp  snake.cpp
